--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "automarket",
+  "name": "automechanic",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@react-icons/all-files": "^4.1.0",
+    "next": "13.5.6",
+    "preline": "^1.9.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10",
+    "daisyui": "^3.9.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3"
   }
 }
